Changelog Notes:
Add French Translation, by MonsterKillers1973
Add Turkish Translation, by Sariserpito